[package]
name = "tcp_chat"
version = "1.2.0"
edition = "2021"

[dependencies]
mdns = "3.0.0"
mdns-sd = "0.11.1"
futures-util = "0.3.30"
async-std = "1.12.0"
local-ip-address = "0.6.1"
hostname = "0.4.0"
bincode = "1.3.3"
cpal = "0.15.3"
tokio = { version = "1.39.2", features = ["full"] }
opus = "0.3.0"
crossterm = "0.27.0"

[features]
debug = []

[lib]
name = "audio_sync"
